--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
   </div>
 
 <div class="cv-download">
-  <a href="cv/cv.pdf" download target="_blank">⬇️ Tải CV (PDF)</a>
+  <a href="cv.pdf" download target="_blank">⬇️ Tải CV (PDF)</a>
 </div>
 
 
